## Process this file with automake to produce Makefile.in

###############################################################################
##                                                                           ##
## Copyright (c) 2001 Morgan Stanley Dean Witter and Co. All rights reserved.##
## See .../src/LICENSE for terms of distribution.                            ##
##                                                                           ##
##                                                                           ##
###############################################################################

SUBDIRS = \
	esf \
	a \
	dap \
	main \
	acore \
	autils \
	app-defaults

EXTRA_DIST = LICENSE
