## Process this file with automake to produce Makefile.in

###############################################################################
##                                                                           ##
## Copyright (c) 2001 Morgan Stanley Dean Witter & Co. All rights reserved.     ##
## See .../src/LICENSE for terms of distribution.                           ##
##                                                                           ##
##                                                                           ##
###############################################################################

lib_LTLIBRARIES = libdap.la

libdap_la_SOURCES = \
	BcdPack.c \
	args_data.c \
	argsfirst.c \
	argsgetopt.c \
	argsnext.c \
	balloc.c \
	bfree.c \
	bgprintf.c \
	bnstring.c \
	brealloc.c \\
	bstring.c \
	buffalloc.c \
	bufffree.c \
	buffputc.c \
	buffputlong.c \
	buffread.c \
	buffroom.c \
	buffstuff.c \
	error.c \
	ultodec.c \
	ultohex.c \
	Warn.h\
	args.h\
	avl.h\
	balloc.h\
	buff.h\
	chan.h\
	conn.h\
	dap.h\
	exbo.h\
	fds.h\
	fletch.h\
	hash.h\
	hpp.h\
	kvp.h\
	lstn.h\
	misc.h\
	mtm.h\
	node.h\
	notsunos4.h\
	sgnl.h\
	slpq.h\
	timer.h\
	tr.h\
	tv.h\
	ulto.h

INCLUDES = -I..

